--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                     </ul>
                 </div>
             </div>
+
+            <partial name ="_LoginPartial"/>
+
         </nav>
     </header>
     <div class="container">
