--- a/ShopMuseoProgettoFinale/Views/Shared/MyLayout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/MyLayout.cshtml
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Museum Shop</title>
+    <title>@ViewData["Title"] - Museum</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 <body>
-    @RenderBody()
 
     <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -31,6 +30,12 @@
         </div>
     </nav>
 </header>
+<main>
+    @RenderBody()
+</main>
+<footer>
+    Copyright © Museum Shop
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
