--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -1,8 +1,4 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
-    Layout = "MyLayout";
+    Layout = "_Layout";
 }
 
-<div class="text-center">
-
-</div>
