--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -5,3 +5,29 @@
 @section links {
         <link rel="stylesheet" href="~/css/Index.css" />
 }
+
+<div class="header-main-bar">
+    <div class="logo-search-container">
+        @*logo*@
+        <div class="logo cols-xs-12 cols-md-4">
+            <a class="navbar-logo">
+                <img class="logo-img" src="~/lib/img/elephant-logo-element-line-art-animal-illustration-vector_53876-151363.webp" alt="MuseumLogo"/>
+            </a>
+        </div>
+        <div class="welcome-title"></div>
+        <div class="cols-xs-12 col-sm-9 col-md-4" id="search">
+            
+                <form>
+                    <input type="text" class="" value placeholder="Find your product..."/>
+                </form>
+            
+        </div>
+
+    </div>
+
+@*-----------------------------------*@
+    <div>
+
+    </div>
+
+</div>
