--- a/ShopMuseoProgettoFinale/wwwroot/css/Index.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Index.css
@@ -1,2 +1,64 @@
 ﻿body {
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
 }
+
+
+@media (max-width: 700px){
+    .logo-img {
+        width: 300px;
+        height:300px;
+    }
+    .logo {
+        text-align:center;
+    }
+    #search {
+        margin: 0 auto;
+    }
+        #search > form {
+            text-align: center;
+            width:100%;
+        }
+        form > input {
+            width:300px;
+            height:30px;
+    }
+}
+
+@media (min-width:700px){
+    .logo-search-container {
+        width:100%;
+        display:flex;
+    }
+
+    .logo-img{
+        width:200px;
+        height:150px;
+    }
+
+    .welcome-title{
+        flex:3;
+        display:flex;
+        justify-content:end;
+        align-items:center;
+        text-align:center;
+    }
+    .welcome-title::after {
+       font-size:3rem;
+       content:"Welcome To Museum Shop";
+    }
+    #search {
+        flex:2;
+        display:flex;
+        justify-content:end;
+        padding-right:5%;
+        align-items:center;
+    }
+    form > input {
+        width:300px;
+    }
+
+}
+
+
