--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -26,8 +26,66 @@
     </div>
 
 @*-----------------------------------*@
-    <div>
+</div>
+@*------------------Finito Header-----------------*@
+<div class="slide-pictures-container">
 
+    <!--image slider start-->
+    <div class="container">
+        <div class="slides">
+            <!--radio buttons start-->
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+            <!--radio buttons end-->
+            <!--slide images start-->
+            <div class="slide first">
+                <img src="https://cdn.pixabay.com/photo/2014/08/17/16/33/notebook-420011_960_720.jpg
+" alt="">
+            </div>
+            <div class="slide">
+                <img src="https://cdn.pixabay.com/photo/2019/04/28/15/13/pen-4163403_960_720.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="https://www.seekpng.com/png/full/231-2311510_itgirl-shop-starry-night-van-gogh-socks-aesthetic.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="https://www.lastilograficamilano.it/image/cache/wp/gj/importazione/p/1340-1782-900x450.webp" alt="">
+            </div>
+            <!--slide images end-->
+            <!--automatic navigation start-->
+            <div class="navigation-auto">
+                <div class="auto-btn1"></div>
+                <div class="auto-btn2"></div>
+                <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
+            </div>
+            <!--automatic navigation end-->
+        </div>
+        <!--manual navigation start-->
+        <div class="navigation-manual">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+        </div>
+        <!--manual navigation end-->
     </div>
+    <!--image slider end-->
 
 </div>
+
+@*--------------------------------------------------------------
+*@
+
+<script type="text/javascript">
+    var counter = 1;
+    setInterval(function () {
+        document.getElementById('radio' + counter).checked = true;
+        counter++;
+        if (counter > 4) {
+            counter = 1;
+        }
+    }, 5000);
+</script>
