--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -27,65 +27,42 @@
 
 @*-----------------------------------*@
 </div>
-@*------------------Finito Header-----------------*@
+@*-------------------------Finito Header----------------------------*@
 <div class="slide-pictures-container">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 
-    <!--image slider start-->
-    <div class="container">
-        <div class="slides">
-            <!--radio buttons start-->
-            <input type="radio" name="radio-btn" id="radio1">
-            <input type="radio" name="radio-btn" id="radio2">
-            <input type="radio" name="radio-btn" id="radio3">
-            <input type="radio" name="radio-btn" id="radio4">
-            <!--radio buttons end-->
-            <!--slide images start-->
-            <div class="slide first">
-                <img src="https://cdn.pixabay.com/photo/2014/08/17/16/33/notebook-420011_960_720.jpg
-" alt="">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2014/08/17/16/33/notebook-420011_960_720.jpg" alt="First slide">
             </div>
-            <div class="slide">
-                <img src="https://cdn.pixabay.com/photo/2019/04/28/15/13/pen-4163403_960_720.jpg" alt="">
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2019/04/28/15/13/pen-4163403_960_720.jpg" alt="Second slide">
             </div>
-            <div class="slide">
-                <img src="https://www.seekpng.com/png/full/231-2311510_itgirl-shop-starry-night-van-gogh-socks-aesthetic.png" alt="">
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://www.lastilograficamilano.it/image/cache/wp/gj/importazione/p/1340-1782-900x450.webp" alt="Third slide">
             </div>
-            <div class="slide">
-                <img src="https://www.lastilograficamilano.it/image/cache/wp/gj/importazione/p/1340-1782-900x450.webp" alt="">
-            </div>
-            <!--slide images end-->
-            <!--automatic navigation start-->
-            <div class="navigation-auto">
-                <div class="auto-btn1"></div>
-                <div class="auto-btn2"></div>
-                <div class="auto-btn3"></div>
-                <div class="auto-btn4"></div>
-            </div>
-            <!--automatic navigation end-->
         </div>
-        <!--manual navigation start-->
-        <div class="navigation-manual">
-            <label for="radio1" class="manual-btn"></label>
-            <label for="radio2" class="manual-btn"></label>
-            <label for="radio3" class="manual-btn"></label>
-            <label for="radio4" class="manual-btn"></label>
-        </div>
-        <!--manual navigation end-->
+
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <!--image slider end-->
 
 </div>
 
 @*--------------------------------------------------------------
 *@
 
-<script type="text/javascript">
-    var counter = 1;
-    setInterval(function () {
-        document.getElementById('radio' + counter).checked = true;
-        counter++;
-        if (counter > 4) {
-            counter = 1;
-        }
-    }, 5000);
-</script>
+     @section Scripts  {
+ 
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+     }
