--- a/ShopMuseoProgettoFinale/wwwroot/css/Index.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Index.css
@@ -26,13 +26,11 @@
     }
 
 /*-----------------slides-----------------*/
-    .slide-pictures-container{
-
-    }
-
-
-
-
+      .slide-pictures-container {
+          width:100%;
+          margin-top:10px;
+          padding-top:20px;
+      }
 
 }
 
@@ -56,7 +54,7 @@
     }
     .welcome-title::after {
        font-size:3rem;
-       content:"Welcome To Museum Shop";
+       content:"Museum Shop";
     }
     #search {
         flex:2;
@@ -70,113 +68,15 @@
     }
 
     /*slides*/
-
-
-    .container {
-        width: 700px;
-        height: 500px;
-        border-radius: 10px;
-        overflow: hidden;
+    .slide-pictures-container {
+        width: 60%;
+        min-width:700px;
+        max-width:1300px;
+        margin:0 auto;
+        padding:70px;
     }
 
-    .slides {
-        width: 500%;
-        height: 500px;
-        display: flex;
-    }
 
-        .slides input {
-            display: none;
-        }
-
-    .slide {
-        width: 25%;
-        transition: 2s;
-    }
-
-        .slide img {
-            width: 700px;
-            height: 500px;
-        }
-
-    /*css for manual slide navigation*/
-
-    .navigation-manual {
-        position: absolute;
-        width: 800px;
-        margin-top: -40px;
-        display: flex;
-        justify-content: center;
-    }
-
-    .manual-btn {
-        border: 2px solid #40D3DC;
-        padding: 5px;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: 1s;
-    }
-
-        .manual-btn:not(:last-child) {
-            margin-right: 40px;
-        }
-
-        .manual-btn:hover {
-            background: #40D3DC;
-        }
-
-    #radio1:checked ~ .first {
-        margin-left: 0;
-    }
-
-    #radio2:checked ~ .first {
-        margin-left: -20%;
-    }
-
-    #radio3:checked ~ .first {
-        margin-left: -40%;
-    }
-
-    #radio4:checked ~ .first {
-        margin-left: -60%;
-    }
-
-    /*css for automatic navigation*/
-
-    .navigation-auto {
-        position: absolute;
-        display: flex;
-        width: 800px;
-        justify-content: center;
-        margin-top: 460px;
-    }
-
-        .navigation-auto div {
-            border: 2px solid #40D3DC;
-            padding: 5px;
-            border-radius: 10px;
-            transition: 1s;
-        }
-
-            .navigation-auto div:not(:last-child) {
-                margin-right: 40px;
-            }
-
-    #radio1:checked ~ .navigation-auto .auto-btn1 {
-        background: #40D3DC;
-    }
-
-    #radio2:checked ~ .navigation-auto .auto-btn2 {
-        background: #40D3DC;
-    }
-
-    #radio3:checked ~ .navigation-auto .auto-btn3 {
-        background: #40D3DC;
-    }
-
-    #radio4:checked ~ .navigation-auto .auto-btn4 {
-        background: #40D3DC;
-    }
 }
 
 
