--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -29,17 +29,19 @@
 </div>
 @*-------------------------Finito Header----------------------------*@
 <div class="slide-pictures-container">
+
+    <div class="slideBoots">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2014/08/17/16/33/notebook-420011_960_720.jpg" alt="First slide">
+                    <img class="d-block w-100 slideImg" src="https://cdn.britannica.com/33/130833-050-462F8F09/Wheatfield-Crows-oil-canvas-Vincent-van-Gogh-1890.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2019/04/28/15/13/pen-4163403_960_720.jpg" alt="Second slide">
+                    <img class="d-block w-100 slideImg" src="https://www.artyfactory.com/art_appreciation/great-artists/vincent-van-gogh/images/van-gogh-chateau-at-auvers-at-sunset-1890.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://www.lastilograficamilano.it/image/cache/wp/gj/importazione/p/1340-1782-900x450.webp" alt="Third slide">
+                    <img class="d-block w-100 slideImg" src="https://design215.com/images/gallery/old_book_850x315.jpg" alt="Third slide">
             </div>
         </div>
 
@@ -51,6 +53,16 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
+
+    </div>
+    </div>
+
+    <div class="photoAfterSlide">
+        <img style="aspect-ratio:2/1" class="d-block w-100" src="https://tandsgo.com/wp-content/uploads/2020/09/Facebook-cover-photo-pen-and-notebook-on-desk-680x259.jpg" alt="Second slide">
+    </div>
+
+    <div class="photoUnderSlide">
+        <img style="aspect-ratio:2/1" class="d-block w-100" src="https://dealnews.in/wp-content/uploads/2020/12/Copy-of-Purple-Smartphone-Modern-Elegance-Technology-Gaming-Facebook-Shops-Cover-10.jpg">
     </div>
 
 </div>
@@ -59,10 +71,7 @@
 *@
 
      @section Scripts  {
- 
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
      }
