--- a/ShopMuseoProgettoFinale/wwwroot/css/Index.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Index.css
@@ -2,6 +2,7 @@
     box-sizing:border-box;
     padding:0;
     margin:0;
+    height:100vh;
 }
 
 
@@ -28,9 +29,26 @@
 /*-----------------slides-----------------*/
       .slide-pictures-container {
           width:100%;
+          min-width:503px;
+
           margin-top:10px;
-          padding-top:20px;
+          padding:10px;
       }
+
+
+    .photoAfterSlide {
+  visibility:hidden;
+  height:0px;
+
+    }
+
+    .photoUnderSlide {
+        visibility: hidden;
+        height: 0px;
+    }
+
+    /*----------------------------------*/
+
 
 }
 
@@ -64,19 +82,54 @@
         align-items:center;
     }
     form > input {
-        width:300px;
+        min-width:165px;
+        width:20vw;
+        max-width:300px;
     }
 
     /*slides*/
     .slide-pictures-container {
-        width: 60%;
-        min-width:700px;
-        max-width:1300px;
+        display:grid;
+        grid-template-columns:repeat(2);
+        gap:3px;
+        grid-auto-columns:minmax(0px,1000px);
+
+        max-width:1000px;
+        max-height:600px;
         margin:0 auto;
-        padding:70px;
+        padding:20px;
+
     }
 
+    .slideImg {
+        aspect-ratio:6/2;
+    }
 
+    .slideBoots {
+        grid-column:1/3;
+        grid-row:1/3;
+    }
+
+    .photoAfterSlide {
+        grid-column:1;
+        grid-row:3;
+        width:100%;
+    }
+
+    .photoUnderSlide {
+        grid-column: 2;
+        grid-row: 3;
+        width: 100%;
+     }
+    .photoAfterSlide > img {
+        max-height:200px;
+    }
+
+    .photoUnderSlide > img{
+        max-height:200px;
+    }
+
+    /*----------------------------------*/
 }
 
 
