--- a/ShopMuseoProgettoFinale/wwwroot/css/Index.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Index.css
@@ -130,6 +130,16 @@
     }
 
     /*----------------------------------*/
+
+    h3 {
+        text-align:center;
+    }
+
+
 }
 
+/*-------------------------------------------Loding-----------------------------------------*/
+
+
+/*------------------------------------------------------------------------*/
 
