--- a/ShopMuseoProgettoFinale/Views/Shared/_LoginPartial.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+@*<ul class="navbar-nav">*@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
@@ -24,4 +24,4 @@ else
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
-</ul>
+@*</ul>*@
