--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section links {
-        <link rel="stylesheet" href="~/css/Index.css" />
+    <link rel="stylesheet" href="~/css/Index.css" />
 }
 
 <div class="header-main-bar">
@@ -11,51 +11,48 @@
         @*logo*@
         <div class="logo cols-xs-12 cols-md-4">
             <a class="navbar-logo">
-                <img class="logo-img" src="~/lib/img/elephant-logo-element-line-art-animal-illustration-vector_53876-151363.webp" alt="MuseumLogo"/>
+                <img class="logo-img" src="~/lib/img/elephant-logo-element-line-art-animal-illustration-vector_53876-151363.webp" alt="MuseumLogo" />
             </a>
         </div>
         <div class="welcome-title"></div>
         @*  searchInput  *@
         <div class="cols-xs-12 col-sm-9 col-md-4" id="search">
-            
-                <form>
-                    <input type="text" class="" value placeholder="Find your product..."/>
-                </form>
-            
+            <form>
+                <input type="text" class="" placeholder="Find your product..." />
+            </form>
         </div>
-
     </div>
-
-@*-----------------------------------*@
+    @*-----------------------------------*@
 </div>
 @*-------------------------Finito Header----------------------------*@
+
 <div class="slide-pictures-container">
 
     <div class="slideBoots">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 
-        <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
                     <img class="d-block w-100 slideImg" src="https://cdn.britannica.com/33/130833-050-462F8F09/Wheatfield-Crows-oil-canvas-Vincent-van-Gogh-1890.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
+                </div>
+                <div class="carousel-item">
                     <img class="d-block w-100 slideImg" src="https://www.artyfactory.com/art_appreciation/great-artists/vincent-van-gogh/images/van-gogh-chateau-at-auvers-at-sunset-1890.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
+                </div>
+                <div class="carousel-item">
                     <img class="d-block w-100 slideImg" src="https://design215.com/images/gallery/old_book_850x315.jpg" alt="Third slide">
+                </div>
             </div>
+
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+
         </div>
-
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-
-    </div>
     </div>
 
     <div class="photoAfterSlide">
@@ -80,7 +77,7 @@
             <span style="width:100px;" class="sr-only"></span>
         </div>
     </div>
-   
+
 
     <div id="productsDiv" class="row"></div>
     <div id="noProductsDiv"> No Producst To Show </div>
@@ -90,64 +87,64 @@
 
 @section Scripts {
     <script type="text/javascript">
-        
+
         loadList();
 
         document.getElementById("search").addEventListener("keyup", searchProducts);
 
-        function searchProducts(){
+        function searchProducts() {
             let stringaDiRicerca = document.getElementById("search").value;
 
             console.log(stringaDiRicerca);
             loadList(stringaDiRicerca);
         }
 
-        debugger; 
+        debugger;
 
-       function loadList(searchString){
+        function loadList(searchString) {
 
-          axios.get("/api/products", {
-              params:{
-                  search:searchString
-              }
+            axios.get("/api/products", {
+                params: {
+                    search: searchString
+                }
 
-          }).then((res)=>{
-              if(res.data.length == 0 ){
-                  document.querySelector("#noProductsDiv").classList.remove("d-none");
-                  document.querySelector("#productsDiv").classList.add("d-none");
-                  debugger;
-              } else {
-                  document.querySelector("#productsDiv").classList.remove("d-none");
-                  document.querySelector("#noProductsDiv").classList.add("d-none");
+            }).then((res) => {
+                if (res.data.length == 0) {
+                    document.querySelector("#noProductsDiv").classList.remove("d-none");
+                    document.querySelector("#productsDiv").classList.add("d-none");
+                    debugger;
+                } else {
+                    document.querySelector("#productsDiv").classList.remove("d-none");
+                    document.querySelector("#noProductsDiv").classList.add("d-none");
 
-                  document.querySelector("#productsDiv").innerHTML ="";
+                    document.querySelector("#productsDiv").innerHTML = "";
 
-                  res.data.forEach(product=> {
+                    res.data.forEach(product => {
 
                         document.querySelector("#productsDiv").innerHTML += `
-                          <div class="col-12 col-md-6 col-sm-4 p-2">
+                                  <div class="col-12 col-md-6 col-sm-4 p-2">
 
-                          <div class="card h-100">
-                          <img src="${product.pictureUrl}" class="card-image-top" >
+                                  <div class="card h-100">
+                                  <img src="${product.pictureUrl}" class="card-image-top" >
 
 
-                          <div class="card-body">
-                                                <h5 class="card-title">${product.name}</h5>
-                                                       
-                                                <p class="card-text">${product.description}</p>
-                                                <p class="card-text">${product.price}</p>
-                                                         <a class="btn btn-primary" href="/User/Details/${product.id}">Dettagli</a>
-                                                        <a class="btn btn-primary" href="/User/Buy/">Buy</a>
-                                              </div>
+                                  <div class="card-body">
+                                                        <h5 class="card-title">${product.name}</h5>
 
-                          </div>
+                                                        <p class="card-text">${product.description}</p>
+                                                        <p class="card-text">${product.price}</p>
+                                                                 <a class="btn btn-primary" href="/User/Details/${product.id}">Dettagli</a>
+                                                                <a class="btn btn-primary" href="/User/Buy/">Buy</a>
+                                                      </div>
 
-                          </div>
-                          `;
-                  });
-              }
+                                  </div>
 
-           document.querySelector("#spinner-loader").classList.add("d-none");
+                                  </div>
+                                  `;
+                    });
+                }
+
+                document.querySelector("#spinner-loader").classList.add("d-none");
 
             }).catch((error) => {
                 console.log(error);
@@ -156,7 +153,7 @@
         }
 
     </script>
-     
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
