--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -122,7 +122,7 @@
                     res.data.forEach(product => {
 
                         document.querySelector("#productsDiv").innerHTML += `
-                                  <div class="col-12 col-md-6 col-sm-4 p-2">
+                                  <div class="col-12 col-sm-6 col-md-4 col-lg-3 p-2">
 
                                   <div class="card h-100">
                                   <img src="${product.pictureUrl}" class="card-image-top" >
