--- a/ShopMuseoProgettoFinale/Views/User/Details.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Details.cshtml
@@ -1,5 +1,41 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    Layout = "_Layout";
+}
+
+
+<div class="container">
+
+    <div class="row">
+        <div class="col col-12 col-sm-7 col-lg-6">
+            <h3 id="productTitle"></h3>
+        </div>
+        <div class="col col-12 col-sm-5 col-lg-6">
+            <div id="productDescription">
+            </div>
+        </div>
+
+    </div>
+</div>
+
+@section Scripts {
+
+    <script type="text/javascript">
+        const id = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
+
+        axios.get(`https://localhost:7119/api/articolo/${id}`).then((res) => {
+      
+            document.getElementById('productTitle').innerHTML +=  ` ${res.data.name}`;
+            document.getElementById("productDescription").innerHTML +=  `
+            <img src="${res.data.pictureUrl}">
+            <p>${res.data.description}</p>
+            <p>price: ${res.data.price}Euro</p>
+            `
+            if(res.data.quantity<=4){
+                document.getElementById("productDescription").innerHTML += `only ${res.data.quantity} left`;
+            }
+            
+             
+        })
+
+    </script>
 }
