--- a/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
@@ -24,7 +24,7 @@
             <input type="number" class="form-control" id="purchasePrice"/>
         </div>
         <button type="submit" class="btn mybutton">Registra</button>
-
+    </form>
 
 </div>
 
