--- a/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
@@ -2,4 +2,65 @@
     Layout = "_Layout";
 }
 
+@section links {
+    <link rel="stylesheet" href="~/css/Details.css" />
+}
 
+<div class="container">
+    <div class="row">
+        <div class="col col-12 col-sm-12 col-lg-6 col-md-6" id="titleImageDiv">
+            <h3 id="productTitle"></h3> 
+        </div>
+
+
+        <div class="col col-12 col-sm-12 col-md-6 ol-lg-6" id="productDescription">
+        </div>
+
+
+        <div id="quantitàDaAcquistare">
+        </div>
+
+    </div>
+</div>
+
+@section Scripts {
+
+    <script type="text/javascript">
+        const id = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
+
+        axios.get(`https://localhost:7128/api/product/${id}`).then((res) => {
+      
+            document.getElementById('productTitle').innerHTML +=  `${res.data.name}`;
+            document.getElementById('titleImageDiv').innerHTML += `<img class="details_Img" src="${res.data.pictureUrl}">`;
+            document.getElementById("productDescription").innerHTML +=  `
+            <p>${res.data.description}</p>
+            <p>price: ${res.data.price} Euro</p>
+            `
+
+            if(res.data.quantity<=4){
+                document.getElementById("productDescription").innerHTML += `<p style="color:red; text-weight:bold; ">only ${res.data.quantity} left</p>`;
+            }
+
+
+            document.getElementById("quantitàDaAcquistare").innerHTML += `<form asp-controller="UserApi" asp-action="Purchase method="post">
+            <div class="mb-3">
+
+            <label> inserisci la quantità che vuoi acquistare </label>
+            <input asp-for="" type="text" class="form-control">
+            <span asp-validation-for="" class="text-danger"></span>
+
+            </div>
+
+            <div class="text-end">
+            <input type="submit" class="btn btn-small btn-info" value="Salva">
+            </div>
+
+            </form> `
+
+            
+             
+        })
+
+    </script>
+
+}
