--- a/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
@@ -1,4 +1,4 @@
-﻿@model Resupply
+﻿@model ProductResupplyView
 
 <div class="container">
 
@@ -6,27 +6,36 @@
         @Html.AntiForgeryToken()
 
         <div class="mb-3">
-            <label for="resupplyDate">Data:</label>
-            <input type="date" class="form-control" id="resupplyDate"/>
-            <span asp-validation-for="Date" class="text-danger"></span>
-        </div>
+                    <label>Select Product:</label>
+                    <select asp-for="Resupply.ProductId" rows="10" class="d-block w-100">
+                        <option value=""></option>
+                @foreach (Product product in Model.ProductList){
+                            
+                                <option value="@product.Id">@product.Name </option>
+                }
+                    </select>
+                    <span asp-validation-for="Resupply.ProductId" class="text-danger"></span>
+                </div>
 
-        <div class="form-group">
-            <label for="productName">Nome Prodotto:</label>
-            <input type="text" class="form-control" id="productName"/>
-            <span asp-validation-for="Product" class="text-danger"></span>
+          <div class="form-group">
+            <label for="resupplyQuantity">Prezzo di acquisto:</label>
+            <input asp-for="Resupply.Quantity" type="number" class="form-control" id="ResupplyQuantity"/>
+            <span asp-validation-for="Resupply.Quantity" class="text-danger"></span>
         </div>
         
         <div class="form-group">
             <label for="supplierName">Nome Fornitore:</label>
-            <input type="text" class="form-control" id="supplierName"/>
-            <span asp-validation-for="SupplierName" class="text-danger"></span>
+            <input asp-for="Resupply.SupplierName" type="text" class="form-control" id="supplierName">
+            <span asp-validation-for="Resupply.SupplierName" class="text-danger"></span>
         </div>
 
         <div class="form-group">
             <label for="purchasePrice">Prezzo di acquisto:</label>
-            <input type="number" class="form-control" id="purchasePrice"/>
+            <input asp-for="Resupply.Price" type="number" class="form-control" id="purchasePrice"/>
+            <span asp-validation-for="Resupply.Price" class="text-danger"></span>
         </div>
+
+
         <button type="submit" class="btn mybutton">Registra</button>
         <span asp-validation-for="Price" class="text-danger"></span>
     </form>
