--- a/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
@@ -18,7 +18,7 @@
                 </div>
 
           <div class="form-group">
-            <label for="resupplyQuantity">Prezzo di acquisto:</label>
+            <label for="resupplyQuantity">Quantity:</label>
             <input asp-for="Resupply.Quantity" type="number" class="form-control" id="ResupplyQuantity"/>
             <span asp-validation-for="Resupply.Quantity" class="text-danger"></span>
         </div>
