--- a/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
@@ -31,7 +31,7 @@
 
         <div class="form-group">
             <label for="purchasePrice">Prezzo di acquisto:</label>
-            <input asp-for="Resupply.Price" type="number" class="form-control" id="purchasePrice"/>
+            <input asp-for="Resupply.Price" type="text" class="form-control" id="purchasePrice"/>
             <span asp-validation-for="Resupply.Price" class="text-danger"></span>
         </div>
 
