modifica View ResupplyCreate

--- a/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
@@ -1,37 +1,5 @@
-﻿@model Resupply
-
-<div class="container">
-
-    <form asp-controller="Admin" asp-action="ResupplyCreate" method="post" class="title-card bg-tabella py-4 px-4">
-        @Html.AntiForgeryToken()
-
-        <div class="mb-3">
-            <label for="resupplyDate">Data:</label>
-            <input type="date" class="form-control" id="resupplyDate"/>
-            <span asp-validation-for="Date" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label for="productName">Nome Prodotto:</label>
-            <input type="text" class="form-control" id="productName"/>
-            <span asp-validation-for="Product" class="text-danger"></span>
-        </div>
-        
-        <div class="form-group">
-            <label for="supplierName">Nome Fornitore:</label>
-            <input type="text" class="form-control" id="supplierName"/>
-            <span asp-validation-for="SupplierName" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label for="purchasePrice">Prezzo di acquisto:</label>
-            <input type="number" class="form-control" id="purchasePrice"/>
-        </div>
-        <button type="submit" class="btn mybutton">Registra</button>
-        <span asp-validation-for="Price" class="text-danger"></span>
-    </form>
-
-
-</div>
-
-
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
