--- a/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/ResupplyCreate.cshtml
@@ -36,7 +36,7 @@
         </div>
 
 
-        <button type="submit" class="btn mybutton">Registra</button>
+        <button type="submit" class="btn btn-small btn-primary mybutton">Registra</button>
        
     </form>
 
