--- a/ShopMuseoProgettoFinale/Views/Admin/UpdateProduct.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Admin/UpdateProduct.cshtml
@@ -29,7 +29,7 @@
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
 
-        <button type="submit" class="btn mybutton">Salva</button>
+        <button type="submit" class="btn btn-small btn-primary mybutton">Salva</button>
     </form>
 
 </div>
