--- a/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
@@ -1,32 +1,42 @@
 ﻿@model Product
+@using ShopMuseoProgettoFinale.Controllers
 
-<div class="card w-100">
+<div class="card w-100 rounded-0 border-0">
     <div class="ratio ratio-4x3">
-        <img src="@Model.PictureUrl" alt="" class="card-img-top" />
+        <img src="@Model.PictureUrl" alt="" class="card-img-top rounded-0" />
     </div>
 
     <div class="card-body d-flex flex-column align-items-center justify-content-start">
         <h5 class="card-title">@Model.Name - @(Model.Price.ToString("C"))</h5>
         <p class="card-text">@Model.Description</p>
+        <p class="card-text mt-auto">Quantità: @Model.Quantity</p>
     </div>
 
-    <div class="d-flex mt-auto justify-content-center">
-        <a href="@Url.Action(action: "Details", controller: "User", values: new { id = Model.Id})"
-           class="btn m-1 mx-2 btn-primary">
-            <span class="material-symbols-rounded m-0">
+    <div class="d-flex justify-content-center">
+        <a href="@Url.Action(action: nameof(UserController.Details),
+                             controller: "User",
+                             values: new { id = Model.Id})"
+           class="btn m-1 mx-2 btn-outline-primary">
+            <span class="material-symbols-outlined m-0">
                 info
             </span>
         </a>
-        <a href="@Url.Action(action: "UpdateProduct", controller: "Admin", values: new { id = Model.Id})"
-           class="btn m-1 mx-2 btn-warning">
-            <span class="material-symbols-rounded m-0">
+        <a href="@Url.Action(action: nameof(AdminController.UpdateProduct),
+                             controller:"Admin",
+                             values: new { id = Model.Id})"
+           class="btn m-1 mx-2 btn-outline-warning">
+            <span class="material-symbols-outlined m-0">
                 edit
             </span>
         </a>
-        <form asp-controller="Admin" asp-action="DeleteProduct" method="post" asp-route-id="@Model.Id">
-            <button class="btn m-1 mx-2 btn-danger" type="submit"
-                    href="@Url.Action(action: "DeleteProduct", controller: "Admin", new { id = Model.Id})">
-                <span class="material-symbols-rounded m-0">
+        <form asp-controller="Admin"
+              asp-action="@nameof(AdminController.DeleteProduct)"
+              method="post" asp-route-id="@Model.Id">
+            <button class="btn m-1 mx-2 btn-outline-danger" type="submit"
+                    href="@Url.Action(action: nameof(AdminController.DeleteProduct),
+                                      controller:"Admin",
+                                      new { id = Model.Id})">
+                <span class="material-symbols-outlined m-0">
                     delete_forever
                 </span>
             </button>
