--- a/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
@@ -46,7 +46,7 @@
             <div class="mb-3">
 
             <label> inserisci la quantità che vuoi acquistare </label>
-            <input asp-for="" type="text" class="form-control">
+            <input asp-for="${}" type="text" class="form-control">
             <span asp-validation-for="" class="text-danger"></span>
 
             </div>
