--- a/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
@@ -1,16 +1,23 @@
 ﻿@model Product
 @using ShopMuseoProgettoFinale.Controllers
 
-<div class="card w-100 rounded-0 border-0">
+<div class="card w-100 rounded-0 border-0 text-center">
+    <div class="classHover">
+
     <div class="ratio ratio-4x3">
         <img src="@Model.PictureUrl" alt="" class="card-img-top rounded-0" />
     </div>
 
     <div class="card-body d-flex flex-column align-items-center justify-content-start">
-        <h5 class="card-title">@Model.Name - @(Model.Price.ToString("C"))</h5>
+        <h5 class="card-title"> @Model.Name </h5>
+        <h5>@(Model.Price.ToString("C"))</h5>
         <p class="card-text">@Model.Description</p>
         <p class="card-text mt-auto">Quantità: @Model.Quantity</p>
     </div>
+
+    </div>
+
+
 
     <div class="d-flex justify-content-center">
         <a href="@Url.Action(action: nameof(UserController.Details),
