Rimossa pagina Details obsoleta, e aggiornato layout per Admin, per rendere l'altezza sempre consistente

--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -138,8 +138,7 @@
                             <p class="card-text lead">${product.description}</p>
                             <p class="card-text mt-auto">${formatter.format(product.price)}</p>
                             <div class="d-flex justify-content-center gap-2">
-                                <a class="btn btn-outline-dark rounded-0" href="/User/Details/${product.id}">Dettagli</a>
-                                <a class="btn btn-outline-dark rounded-0" href="/User/Buy/${product.id}">Buy</a>
+                                <a class="btn btn-outline-dark rounded-0" href="/User/Buy/${product.id}">Acquista ora</a>
                             </div>
                         </div>
                     </div>
