--- a/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
@@ -1,26 +1,22 @@
 ﻿@model Product
 @using ShopMuseoProgettoFinale.Controllers
 
-<div class="card w-100 rounded-0 border-0 text-center">
-    <div class="classHover">
+<div class="card w-100 rounded-0 border-0 text-center d-flex flex-column align-items-center">
+    <div class="classHover d-flex flex-column align-items-center flex-grow-1 w-100">
+        <div class="ratio ratio-4x3">
+            <img src="@Model.PictureUrl" alt="" class="card-img-top rounded-0 object-fit-contain" />
+        </div>
 
-    <div class="ratio ratio-4x3">
-        <img src="@Model.PictureUrl" alt="" class="card-img-top rounded-0" />
+        <div class="card-body d-flex flex-column align-items-center justify-content-start">
+            <h5 class="card-title"> @Model.Name </h5>
+            <h5 class="card-text">@(Model.Price.ToString("C"))</h5>
+            <p class="card-text">@Model.Description</p>
+            <p class="card-text mt-auto">Quantità: @Model.Quantity</p>
+        </div>
     </div>
-
-    <div class="card-body d-flex flex-column align-items-center justify-content-start">
-        <h5 class="card-title"> @Model.Name </h5>
-        <h5>@(Model.Price.ToString("C"))</h5>
-        <p class="card-text">@Model.Description</p>
-        <p class="card-text mt-auto">Quantità: @Model.Quantity</p>
-    </div>
-
-    </div>
-
-
 
     <div class="d-flex justify-content-center">
-        <a href="@Url.Action(action: nameof(UserController.Details),
+        <a href="@Url.Action(action: nameof(UserController.Buy),
                              controller: "User",
                              values: new { id = Model.Id})"
            class="btn m-1 mx-2 btn-outline-primary">
