--- a/ShopMuseoProgettoFinale/wwwroot/css/Index.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Index.css
@@ -1,45 +1,47 @@
 ﻿body {
-    box-sizing:border-box;
-    padding:0;
-    margin:0;
-    height:100vh;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
 }
 
 
-@media (max-width: 700px){
+@media (max-width: 700px) {
     .logo-img {
         width: 300px;
-        height:300px;
+        height: 300px;
     }
+
     .logo {
-        text-align:center;
+        text-align: center;
     }
+
     #search {
         margin: 0 auto;
     }
+
         #search > form {
             text-align: center;
-            width:100%;
+            width: 100%;
         }
-        form > input {
-            width:300px;
-            height:30px;
+
+    form > input {
+        width: 300px;
+        height: 30px;
     }
 
-/*-----------------slides-----------------*/
-      .slide-pictures-container {
-          width:100%;
-          min-width:503px;
-
-          margin-top:10px;
-          padding:10px;
-      }
+    /*-----------------slides-----------------*/
+    .slide-pictures-container {
+        width: 100%;
+        min-width: 503px;
+        margin-top: 10px;
+        padding: 10px;
+    }
 
 
     .photoAfterSlide {
-  visibility:hidden;
-  height:0px;
-
+        visibility: hidden;
+        height: 0px;
     }
 
     .photoUnderSlide {
@@ -52,90 +54,90 @@
 
 }
 
-@media (min-width:700px){
+@media (min-width:700px) {
     .logo-search-container {
-        width:100%;
-        display:flex;
+        width: 100%;
+        display: flex;
     }
 
-    .logo-img{
-        width:200px;
-        height:150px;
+    .logo-img {
+        width: 200px;
+        height: 150px;
     }
 
-    .welcome-title{
-        flex:3;
-        display:flex;
-        justify-content:end;
-        align-items:center;
-        text-align:center;
+    .welcome-title {
+        flex: 3;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        text-align: center;
     }
-    .welcome-title::after {
-       font-size:3rem;
-       content:"Museum Shop";
-    }
+
+        .welcome-title::after {
+            font-size: 3rem;
+            content: "Museum Shop";
+        }
+
     #search {
-        flex:2;
-        display:flex;
-        justify-content:end;
-        padding-right:5%;
-        align-items:center;
+        flex: 2;
+        display: flex;
+        justify-content: end;
+        padding-right: 5%;
+        align-items: center;
     }
+
     form > input {
-        min-width:165px;
-        width:20vw;
-        max-width:300px;
+        min-width: 165px;
+        width: 20vw;
+        max-width: 300px;
     }
 
     /*slides*/
     .slide-pictures-container {
-        display:grid;
-        grid-template-columns:repeat(2);
-        gap:3px;
-        grid-auto-columns:minmax(0px,1000px);
-
-        max-width:1000px;
-        max-height:600px;
-        margin:0 auto;
-        padding:20px;
-
+        display: grid;
+        grid-template-columns: repeat(2);
+        gap: 3px;
+        grid-auto-columns: minmax(0px,1000px);
+        max-width: 1000px;
+        max-height: 600px;
+        margin: 0 auto;
+        padding: 20px;
     }
 
     .slideImg {
-        aspect-ratio:6/2;
+        aspect-ratio: 6/2;
     }
 
     .slideBoots {
-        grid-column:1/3;
-        grid-row:1/3;
+        grid-column: 1/3;
+        grid-row: 1/3;
     }
 
     .photoAfterSlide {
-        grid-column:1;
-        grid-row:3;
-        width:100%;
+        grid-column: 1;
+        grid-row: 3;
+        width: 100%;
     }
 
     .photoUnderSlide {
         grid-column: 2;
         grid-row: 3;
         width: 100%;
-     }
-    .photoAfterSlide > img {
-        max-height:200px;
     }
 
-    .photoUnderSlide > img{
-        max-height:200px;
+    .photoAfterSlide > img {
+        max-height: 200px;
+    }
+
+    .photoUnderSlide > img {
+        max-height: 200px;
     }
 
     /*----------------------------------*/
 
     h3 {
-        text-align:center;
+        text-align: center;
     }
-
-
 }
 
 /*-------------------------------------------Loding-----------------------------------------*/
@@ -166,8 +168,7 @@ figure img {
     background: -moz-linear-gradient(0deg, rgba(40,26,54,1) 0%, rgba(89,59,116,0) 100%);
     background: -webkit-linear-gradient(0deg, rgba(40,26,54,1) 0%, rgba(89,59,116,0) 100%);
     background: linear-gradient(0deg, rgba(40,26,54,1) 0%, rgba(89,59,116,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#281a36",endColorstr="#593b74",GradientType=1);
-    s display: block;
+    display: block;
     position: absolute;
     height: 200px;
     width: 100%;
@@ -223,7 +224,6 @@ figure img {
     background: -moz-linear-gradient(0deg, rgba(64,10,111,1) 0%, rgba(89,59,116,0) 100%);
     background: -webkit-linear-gradient(0deg, rgba(64,10,111,1) 0%, rgba(89,59,116,0) 100%);
     background: linear-gradient(0deg, rgba(64,10,111,1) 0%, rgba(89,59,116,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#400a6f",endColorstr="#593b74",GradientType=1);
 }
 
 .news-Slide-up:hover .newsCaption {
@@ -231,5 +231,6 @@ figure img {
     transform: translateY(0px);
     -webkit-transition: -webkit-transform 0.4s;
     transition: -webkit-transform 0.4s;
-    transition: transform 0.4s, transition: transform 0.4s, -webkit-transform 0.4s;
+    transition: transform 0.4s;
+    transition: transform 0.4s -webkit-transform 0.4s;
 }
