aggiunto H1 SOTTO header

--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -10,10 +10,24 @@
     <div class="logo-search-container">
         @*logo*@
         <div class="logo cols-xs-12 cols-md-4">
-            <a class="navbar-logo">
-                <img class="logo-img" src="~/lib/img/elephant-logo-element-line-art-animal-illustration-vector_53876-151363.webp" alt="MuseumLogo" />
-            </a>
+            <div class="containerLogo">
+                <div class="box">
+
+                    <div class="title">
+                        <span class="block"></span>
+                        <h1>Museum Shop<span></span></h1>
+                    </div>
+
+                    <div class="role">
+                        <div class="block"></div>
+                        <p>Make Yourself Happy</p>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
+
         <div class="welcome-title"></div>
         @*  searchInput  *@
         <div class="cols-xs-12 col-sm-9 col-md-4" id="search">
@@ -25,6 +39,22 @@
     @*-----------------------------------*@
 </div>
 @*-------------------------Finito Header----------------------------*@
+<h1 id="Entro">
+    <span>Here</span>
+    <span>you</span>
+    <span>can</span>
+    <span>bring</span>
+    <span>your</span>
+    <span>memories</span>
+    <span>home</span>
+    <span>from</span>
+    <span>your</span>
+    <span>fav</span>
+    <span>museum</span> 
+</h1>
+ 
+
+
 
 <div class="slide-pictures-container">
 
@@ -68,7 +98,6 @@
 @*------------------------Finito Slides--------------------------------------
 *@
 
-<h3>Discover Our Products</h3>
 <div class="container-fluid">
     <div id="spinner-loader" class="d-flex justify-content-center">
         <div class="spinner-border" role="status">
